# antlr4-alteryx-functions

./: AlteryxFunctions.g4  LICENSE  Makefile  README.md  app.py  conversion.ipynb  pyproject.toml  requirements.txt
. binder/: apt.txt
.gradio/flagged/: dataset1.csv
AlteryxFunctionsTranspiler/: AlteryxFunctions.interp  AlteryxFunctions.tokens  AlteryxFunctionsLexer.interp  AlteryxFunctionsLexer.py  AlteryxFunctionsLexer.tokens  AlteryxFunctionsListener.py  AlteryxFunctionsParser.py  AlteryxFunctionsVisitor.py  AlteryxToPython.py
tests/: test_conversions.py
